[package]
name = "tt-core"
version = "0.6.0"
authors = ["XX <freecoder.xx@gmail.com>"]
edition = "2018"

[lib]
name = "tt_core"

[dependencies]
chrono = "0.4"
failure = "0.1"
regex = "1.1"
lazy_static = "1.2"
ropey = "1.0"
field_types = "1.1"

[dev-dependencies]
file_assertions = { git = "https://github.com/XX/file_assertions.git" }